src/test/deca/extension/codegen/invalid/result/test_initialisation_invalid_output_no_check.res
  ** IMA ** ERREUR ** Ligne 21 : 
    STORE : Pas une adresse memoire
